chore 1.优化Component部分实现
(cherry picked from commit 23566d0b066b737024ff2d62ef4b64c4441f3472)