@@ -19,12 +19,11 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Accessors(chain = true)
 @NoArgsConstructor
+// TODO 优化掉这玩意
 public class Component implements Cloneable, Serializable {
-    private static final Component EMPTY = new Component();
 
     // region 属性定义
     /**
@@ -375,7 +374,7 @@ public class Component implements Cloneable, Serializable {
 
     public Style getStyle() {
         Style style = Style.EMPTY;
-        if (!isColorEmpty())
+        if (!isColorEmpty() && getColor() != 0xFFFFFFFF)
             style = style.withColor(TextColor.fromRgb(getColor()));
         style = style.withUnderlined(this.isUnderlined())
                 .withStrikethrough(this.isStrikethrough())
@@ -421,7 +420,7 @@ public class Component implements Cloneable, Serializable {
      */
     public String getString(String languageCode, boolean igStyle, boolean igColor) {
         StringBuilder result = new StringBuilder();
-        String colorStr = isColorEmpty() ? "§f" : StringUtils.argbToMinecraftColor(getColor());
+        String colorStr = isColorEmpty() ? "§f" : StringUtils.argbToMinecraftColorString(getColor());
         igColor = igColor && colorStr.equalsIgnoreCase("§f");
         // 如果颜色值为null则说明为透明，则不显示内容，所以返回空文本
         if (!this.isColorEmpty()) {
@@ -498,11 +497,23 @@ public class Component implements Cloneable, Serializable {
                             formattedArg = new Component();
                         } else {
                             Component argComponent = this.args.get(index);
-                            try {
-                                // 颜色代码传递
-                                String colorCode = split[i].replaceAll("^.*?((?:§[\\da-fA-FKLMNORklmnor])*)$", "$1");
-                                formattedArg = new Component(String.format(placeholder.replaceAll("^%\\d+\\$", "%"), colorCode + argComponent.toString())).withStyle(argComponent);
-                            } catch (Exception e) {
+                            if (argComponent.getI18nType() != EI18nType.PLAIN) {
+                                try {
+                                    // 颜色代码传递
+                                    String colorCode = split[i].replaceAll("^.*?((?:§[\\da-fA-FKLMNORklmnor])*)$", "$1");
+                                    formattedArg = new Component(String.format(placeholder.replaceAll("^%\\d+\\$", "%"), colorCode + argComponent)).withStyle(argComponent);
+                                } catch (Exception e) {
+                                    // 颜色传递
+                                    if (argComponent.isColorEmpty()) {
+                                        argComponent.setColor(this.color);
+                                    }
+                                    formattedArg = argComponent;
+                                }
+                            } else {
+                                // 颜色传递
+                                if (argComponent.isColorEmpty()) {
+                                    argComponent.setColor(this.color);
+                                }
                                 formattedArg = argComponent;
                             }
                         }
@@ -514,7 +525,10 @@ public class Component implements Cloneable, Serializable {
                 components.add(net.minecraft.network.chat.Component.literal(this.text).withStyle(this.getStyle()));
             }
         }
-        components.addAll(this.children.stream().map(component -> (MutableComponent) component.toTextComponent(languageCode)).collect(Collectors.toList()));
+        components.addAll(this.children.stream().map(component -> (MutableComponent) component.toTextComponent(languageCode)).toList());
+        if (components.isEmpty()) {
+            components.add(net.minecraft.network.chat.Component.literal(""));
+        }
         MutableComponent result = components.get(0);
         for (int j = 1; j < components.size(); j++) {
             result.append(components.get(j));
@@ -552,10 +566,43 @@ public class Component implements Cloneable, Serializable {
     }
 
     /**
+     * 获取聊天文本组件
+     *
+     * @return 格式化颜色后的文本组件
+     */
+    public net.minecraft.network.chat.Component toChatComponent() {
+        return this.toChatComponent(this.getLanguageCode());
+    }
+
+    /**
+     * 获取聊天文本组件
+     *
+     * @return 格式化颜色后的文本组件
+     */
+    public net.minecraft.network.chat.Component toChatComponent(String languageCode) {
+        return rewriteColor(this.toTextComponent(languageCode));
+    }
+
+    // 😵‍💫
+    public static net.minecraft.network.chat.Component rewriteColor(net.minecraft.network.chat.Component component) {
+        if (component instanceof MutableComponent) {
+            TextColor color = component.getStyle().getColor();
+            if (color != null && color.serialize().startsWith("#")) {
+                Style style = component.getStyle().withColor(TextColor.parseColor(StringUtils.argbToMinecraftColor(StringUtils.argbToHex(color.serialize())).name().toLowerCase()));
+                ((MutableComponent) component).setStyle(style);
+            }
+        }
+        for (net.minecraft.network.chat.Component sibling : component.getSiblings()) {
+            rewriteColor(sibling);
+        }
+        return component;
+    }
+
+    /**
      * 获取空文本组件
      */
     public static Component empty() {
-        return EMPTY;
+        return new Component();
     }
 
     /**
